syntax = "proto3";

option go_package = "github.com/rsmarincu/glassnode/fees";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Fees {
  rpc ListFees(ListFeesRequest) returns (ListFeesResponse) {
    option (google.api.http) = {
      get: "/v1/fees"
    };
  };
}

message ListFeesRequest {
  uint32 page_size = 1;
  string page_token = 2;
}

message ListFeesResponse {
  repeated Fee fees = 1;
  string next_page_token = 2;
  string previous_page_token = 3;
}

message Fee {
  google.protobuf.Timestamp t = 1;
  float v = 2;
}